kustomize/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: registry
  namespace: registry
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-system
  hostnames:
    - registry.fava.casa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: registry
          port: 5000
